@@ -104,6 +104,7 @@ AvahiServiceBrowser*  epc_shell_create_service_browser   (AvahiIfIndex          
                                                           AvahiServiceBrowserCallback  callback,
                                                           gpointer                     user_data,
                                                           GError                     **error);
+void                  epc_shell_restart_avahi_client     (const gchar                 *strloc);
 
 G_CONST_RETURN gchar* epc_shell_get_host_name            (GError                     **error);
 
